--- a/package.json
+++ b/package.json
@@ -28,21 +28,19 @@
           "rpm"
         ]
       },
+      "packagerConfig": {
+        "icon": "src/images/icon.ico"
+      },
       "electronPackagerConfig": {
-        "packageManager": "npm"
+        "packageManager": "npm",
+        "icon": "src/images/icon.ico"
       },
       "electronWinstallerConfig": {
         "name": "mekanders_tool"
       },
-      "electronInstallerDebian": {},
-      "electronInstallerRedhat": {},
       "github_repository": {
         "owner": "",
         "name": ""
-      },
-      "windowsStoreConfig": {
-        "packageName": "",
-        "name": "mekanders_tool"
       }
     }
   },
@@ -58,6 +56,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "electron-forge": "^5.2.4",
+    "electron-packager": "^15.2.0",
     "electron-prebuilt-compile": "8.2.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.1.0",
