--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     }
   },
   "dependencies": {
+    "bootstrap-icons": "^1.4.1",
     "electron-compile": "^6.4.4",
     "electron-dl": "^3.0.2",
     "electron-squirrel-startup": "^1.0.0",
